--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>CRONOMETRO</h1>
+        <h1>CRONÔMETRO</h1>
         <div class="box">
             <span id="seg">00</span>:<span id="mseg">00</span>
         </div>
